# Thesis_code

./: README.md
intermediate-work/nimbus_explore/: package.xml
intermediate-work/nimbus_explore/src/: MG_tests.py  Object_positions.csv  nimbus_explore.cpp  nimbus_explore.py  nimbus_test_scoop_singleTry.py~  nimbus_test_spoon.py  nimbus_test_squeegee.py  nimbus_test_squeegee.py~  pierce_predict.py
intermediate-work/nimbus_explore/src/Rank_att_only/Hammer/1/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Screwdriver/1/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Screwdriver/2/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Spatula/1/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Spatula/2/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Spatula/3/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Spatula/4/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Spoon/1/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Spoon/3/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Squeegee/3/: final_rank.csv
intermediate-work/nimbus_explore/src/Rank_att_only/Squeegee/5/: final_rank.csv
intermediate-work/nimbus_explore/src/Results_diff_NNarch/: results.csv
intermediate-work/nimbus_explore/src/Results_diff_NNarch/2/pierce/: pierce_NN1_wts_40.h5
intermediate-work/nimbus_explore/src/Results_diff_NNarch/4/materials/: materials_NN3_wts_40.h5
intermediate-work/nimbus_explore/src/Results_diff_NNarch/4/pierce/: pierce_NN3_wts_40.h5
intermediate-work/nimbus_explore/src/Results_diff_NNarch/5/pierce/: pierce_rNN_wts_10.h5
intermediate-work/nimbus_explore/src/backup_code/: collection.csv  pierce_NN1_wts_20.h5  pierce_wts.h5
intermediate-work/nimbus_explore/src/results_geo_rank/Screwdriver/1/: output_rankings.csv
intermediate-work/nimbus_explore/src/results_geo_rank/Screwdriver/2/: output_rankings.csv
intermediate-work/nimbus_explore/src/results_geo_rank/Screwdriver/3/: final_rank.csv
intermediate-work/nimbus_explore/src/results_geo_rank/Screwdriver/4/: final_rank.csv
intermediate-work/nimbus_explore/src/results_geo_rank/Screwdriver/5/: output_rankings.csv
intermediate-work/nimbus_explore/src/results_geo_rank/Spatula/2/: final_rank.csv  output_rankings.csv
intermediate-work/nimbus_explore/src/results_geo_rank/Spatula/3/: final_rank.csv  output_rankings.csv
intermediate-work/nimbus_explore/src/results_geo_rank/Spatula/5/: output_rankings.csv
intermediate-work/nimbus_explore/src/results_geo_rank/Spoon/1/: final_rank.csv
macgyvering_peripherals/PCL_features/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  ShotA_descriptors_attachment.csv  ShotC_descriptors_attachment.csv  cmake_install.cmake  esf_compute.cpp  shotA_compute  shotA_compute.cpp  shotC_compute  shotC_compute.cpp
macgyvering_peripherals/PCL_features/full/: coin.ply  cuboid.ply  pliers.ply  pliers_0.ply  rod.ply  scissors.ply  screwdriver_3_seg.ply
macgyvering_peripherals/PCL_features/parts/: bottle_1_3dwh1.ply  bottle_5_3dwh2.ply  bottle_8_3dwh2.ply  bowl_1_3dwh1.ply  bowl_3_3dwh1.ply  chineseknife_2_3dwh2.ply  chopstick_1_3dwh1.ply  chopstick_7_3dwh1.ply  cube1.ply  fyingpan_3_3dwh1.ply  fyingpan_4_3dwh1.ply  fyingpan_4_3dwh2.ply  ladle_1_3dwh2.ply  meshspatula_1_3dwh1.ply  mug_1_3dwh2.ply  plate_1_3dwh1.ply  pliers1_1.ply  pliers2_2.ply  pliers3_1.ply  pliers3_2.ply  pliers_2_seg2.ply  scissor1_1.ply  screwdriver_3_seg3.ply  spoon_1_3dwh1.ply  tablefork_19_3dwh4.ply
object_data/: README.md
robot_code/nimbus_explore/: CMakeLists.txt  package.xml
robot_code/nimbus_explore/launch/: nimbus_explore.launch
robot_code/nimbus_explore/src/: Macgyver_DS.csv  collection3.csv  nimbus_cases.py  nimbus_explore.py  nimbus_gripper_close.py  nimbus_move.py  nimbus_test.py  nimbus_test_spatula_magnet.py  nimbus_test_squeegee.py  output_rankings.csv  pierce_NN2_wts.h5  pierce_predict.py  pierce_rNN.json  pierce_rNN_wts.h5  pierce_svm.joblib  ranking_test.csv
robot_code/nimbus_explore/src/Dual_NN_files/Model/: material_prop_screw.h5  material_prop_weights_flip.h5  material_prop_weights_rake.h5  material_prop_weights_scoop.h5  material_prop_weights_screw.h5
robot_code/nimbus_explore/src/NN_joblib_files/: SHOTC_NN_Hammer_Final.joblib  SHOTC_NN_Screwdriver_Final.joblib  SHOTC_NN_Spatula_Final.joblib  SHOTC_NN_Spoon_Final.joblib
robot_code/nimbus_explore/src/Results_Models/Rank_att_only/Hammer/2/: final_rank.csv
robot_code/nimbus_explore/src/Results_Models/Rank_att_only/Hammer/4/: final_rank.csv
robot_code/nimbus_explore/src/Results_Models/Rank_att_only/Screwdriver/3/: final_rank.csv
robot_code/nimbus_explore/src/Results_Models/backup_code/: collection2.csv  pierce_NN1.json  pierce_NN1_wts.h5  pierce_NN2_wts_4.h5  pierce_NN2_wts_40.h5  pierce_NN_20.json  pierce_wts_20.h5
(+938 files in other folders)
